Fix overflowing tracks bug

--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -27,5 +27,5 @@
 
 .rt-layout__timeline {
   overflow-x: auto;
-  padding-top: $react-timelines-marker-label-height;
+  // padding-top: $react-timelines-marker-label-height;
 }
