--- a/src/scss/components/_timeline.scss
+++ b/src/scss/components/_timeline.scss
@@ -1,5 +1,7 @@
 .rt-timeline {
   position: relative;
+  overflow: hidden;
+  padding-top: $react-timelines-marker-label-height;
 }
 
 .rt-timeline__header {}
